# performance_engineering

./: .clang-format  .gitignore
assignments/hw1_tools_and_c/code/matrix-multiply/: fasttime.h  testbed.c
lecs/01_mat_mul/: CMakeLists.txt  Makefile  matrix_multiplication.cpp
lecs/01_matrix_multiplication/: matrix_mult_test.cpp  matrix_multiplication.h
lecs/02_bentley_rules/: README.md
lecs/04_assembly/: cpu_check  cpu_check.cpp
lecs/05_c_to_asm/: Makefile  calling_convention.md
lecs/05_c_to_asm/src/: main.c
lecs/06_multi_core/: multicore.md
lecs/06_multi_core/TBB/: Makefile  matrix_mul_tbb.cpp
lecs/06_multi_core/pthreads/: Makefile  matrix_mul.c
lecs/07_parallelism/: Makefile  parallel_quicksort.cpp
